test newly compressed jumbo, fix spacing

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -145,12 +145,13 @@ p {
 
     .centered { padding: 40px 0 0 0; }
 
-    #experience {
-        img { width: 60px; }
-    }
-
-    #projects h3 {
-        margin: 40px 10px 30px 0;
+    #projects {
+        h2 {
+            margin-top: 80px;
+        }
+        h3 {
+            margin: 40px 10px 10px 0;
+        }
     }
 
     #contact {
